--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <meta Content-Security-Policy-Report-Only: default-src https:; report-uri /endpoint>
+    <meta Content-Security-Policy-Report-Only: default-src= "http://172.16.2.128:8113/api/TBL_IMAGENES_OFERTAS_WEBFARINTER"; report-uri>
 
     
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
