Cambios en content

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta Content-Security-Policy-Report-Only: default-src= "http://172.16.2.128:8113/api/TBL_IMAGENES_OFERTAS_WEBFARINTER"; report-uri ="/endpoint"> -->
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">  -->
@@ -18,7 +19,6 @@
 <!-- google fonts -->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
-
   </head>
 
   <body>
